# ssot-registry

./: .ci-matrix-results.txt  .dockerignore  .gitignore  .tmp-spec-adr-adr.yaml  .tmp-spec-adr-spec.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  VERIFICATION.md  conftest.py  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml
.agents/plugins/: marketplace.json
.agents/roles/: curriculum-planner.md  seo-aeo-aieo-specialist.md  technical-marketing-engineer.md  technical-writer.md
.codex/: AGENTS.md  config.toml
.codex/environments/: environment.toml
.github/workflows/: _package-ci.yml  _package-publish.yml  _publish-built-package.yml  ci.yml  deploy-lander.yml  lander-ci.yml  prepare-release.yml  publish-ssot-cli.yml  publish-ssot-codegen.yml  publish-ssot-conformance.yml  publish-ssot-contracts.yml  publish-ssot-core.yml  publish-ssot-mcp.yml  publish-ssot-pack-contracts.yml  publish-ssot-registry.yml  publish-ssot-tui.yml  publish-ssot-views.yml  publish.yml  release.yml
.ssot/: registry.json
.ssot/adr/: ADR-0001-canonical-json-registry.json  ADR-0001-canonical-json-registry.md  ADR-0001-canonical-json-registry.yaml  ADR-0002-features-are-targetable-units.json  ADR-0002-features-are-targetable-units.yaml  ADR-0003-issues-are-plannable-work-items.json  ADR-0003-issues-are-plannable-work-items.yaml  ADR-0004-entity-centric-registry-derived-graph.json  ADR-0004-entity-centric-registry-derived-graph.yaml  ADR-0005-normalized-prefixed-ids.json  ADR-0005-normalized-prefixed-ids.yaml  ADR-0006-claim-status-vs-tier.json  ADR-0006-claim-status-vs-tier.yaml  ADR-0007-feature-implementation-vs-lifecycle.json  ADR-0007-feature-implementation-vs-lifecycle.yaml  ADR-0008-immutable-boundary-and-release-snapshots.json  ADR-0008-immutable-boundary-and-release-snapshots.yaml  ADR-0009-fail-closed-guards.json  ADR-0009-fail-closed-guards.yaml  ADR-0010-generated-projections-are-non-canonical.json  ADR-0010-generated-projections-are-non-canonical.md  (+105 more)
.ssot/graphs/: full-cert-graph.json  (+3 more)
.tmp/: adr-list-ids.yaml  adr-list.json  spec-list-ids.yaml  spec-list.json
docs/: cli_full_coverage_delivery_plan.md  cli_test_gap_report.md  content-addressed-evidence-registry-truth-matrices.md
examples/: README.md  e2e-three-releases.md
nginx/: default.conf
public/: sitemap-tree.json
reports/: npmctl-issue-feedback-report.md
scripts/: _screenshot_common.py  benchmark_registry_load_strategies.py  benchmark_ssot_cli_vs_tigrstore.py  bump_pyproject_version.py  bump_release_train.py  generate_cli_screenshots.py  generate_cli_surface_manifest.py  generate_terminal_screenshots.py  generate_tui_screenshots.py  lint.sh  namecheap_dns.py  package.sh  release.sh  release_metadata.py  sync_packaged_docs.py  sync_site_discovery.mjs  test.sh  test_all_supported_pythons.sh  update_readme_schema_badges.py  write_npmctl_state.py
src/: App.tsx  main.tsx  mdwrk-lander-content-contract.d.ts  styles.css
tests/: helpers.py  site-discovery-smoke.mjs  site-render-smoke.tsx
(+1246 files in other folders)
