[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssot-registry"
version = "0.2.3.dev1"
description = "Portable single-source-of-truth registry for features, tests, claims, evidence, issues, risks, boundaries, releases, ADRs, and specs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Jacob Stewart", email = "jacob@swarmauri.com" }
]
keywords = [
  "ssot",
  "registry",
  "claims",
  "evidence",
  "release-management",
  "certification",
  "governance"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Archiving",
]

[project.urls]
Homepage = "https://github.com/groupsum/ssot-registry"
Repository = "https://github.com/groupsum/ssot-registry"
Issues = "https://github.com/groupsum/ssot-registry/issues"

[project.scripts]
ssot-registry = "ssot_registry.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ssot_registry.schema" = ["*.json"]
"ssot_registry.templates" = ["*.json"]
"ssot_registry.templates.adr" = ["*.md", "*.json"]
"ssot_registry.templates.specs" = ["*.md", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]
